tests/NormalTests/paczka1/small_fuzzy/99693693.err
Error in line 2: A55 A829 30,23
Error in line 3: IUJzwKzkd A55 27,7
Error in line 4: uk3a A829 75,2
